--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon -r tsconfig-paths/register src/server.ts",
     "start": "node ./dist/server.js",
     "seed": "node ./scripts/seedDb.js",
-    "test": ""
+    "test": "jest --coverage"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -25,9 +25,15 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.10",
+    "@types/supertest": "^6.0.2",
     "concurrently": "^8.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.11",
     "typescript": "^5.8.2"
