--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "deel-task",
   "version": "0.1.0",
   "private": true,
-  "main": "src/server.ts",
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "dev": "nodemon -r tsconfig-paths/register src/server.ts",
     "start": "node ./dist/server.js",
-    "seed": "node ./scripts/seedDb.js",
+    "seed": "npm run build && node dist/scripts/seedDb.js",
     "test": "jest --coverage"
   },
   "dependencies": {
@@ -24,6 +23,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@jest-mock/express": "^3.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
@@ -32,6 +32,7 @@
     "concurrently": "^8.0.1",
     "jest": "^29.7.0",
     "nodemon": "^2.0.22",
+    "sequelize-test-helpers": "^1.4.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
