--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "dev": "nodemon -r tsconfig-paths/register src/server.ts",
-    "start": "node ./dist/server.js",
+    "start": "node ./dist/src/server.js",
     "seed": "npm run build && node dist/scripts/seedDb.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "e2e": "npm run seed && mocha e2e/test-suits.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -29,8 +30,10 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.2",
+    "chai": "^5.2.0",
     "concurrently": "^8.0.1",
     "jest": "^29.7.0",
+    "mocha": "^11.1.0",
     "nodemon": "^2.0.22",
     "sequelize-test-helpers": "^1.4.3",
     "supertest": "^7.0.0",
