--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -4,12 +4,13 @@ on:
     push:
         branches:
             - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
         matrix:
-            node-version: [16, 18]
+            node-version: [23.7.0]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
